fix onClick error and h3 text align

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -16,3 +16,7 @@ body {
   border: 0px;
   text-align: center;
 }
+
+h3 {
+  text-align: center;
+}
